Додав hero-img, додав sprite, додав overlay

--- a/index.html
+++ b/index.html
@@ -34,32 +34,32 @@
     </header>
     <!-- контент сторінки -->
     <main>
-        <section class="hero">
+        <section class="hero overlay">
             <div class="container title-centr">
                 <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="hero-button">Замовити послугу</button>
-            </div>
+            </div>   
         </section>
         <section class="bg-white-perevagy">
             <div class="container">
                 <h2 class="visually-hidden">Наші переваги</h2>
                 <ul class="perevagy">
-                    <li>
+                    <li class="logo-perevagy">
                         <h3 class="title-perevagy">Увага до деталей</h3>
                         <p class="paragraph-perevagy">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
-                    <li>
+                    <li class="logo-perevagy">
                         <h3 class="title-perevagy">Пунктуальність</h3>
                         <p class="paragraph-perevagy">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li>
+                    <li class="logo-perevagy">
                         <h3 class="title-perevagy">Планування</h3>
                         <p class="paragraph-perevagy">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li>
+                    <li class="logo-perevagy">
                         <h3 class="title-perevagy">Сучасні технології</h3>
                         <p class="paragraph-perevagy">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                    </li>
+                    </li class="logo-perevagy">
                 </ul>
             </div>
         </section>
@@ -104,6 +104,16 @@
                             <h3 class="title-name">Михайло Єрмаков</h3>
                             <p class="title-subname">UI Designer</p>
                         </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="bg-white-work">
+            <div class="container">
+                <h2 class="title-section">Постійні клієнти</h2>
+                <ul class="clients">
+                    <li>
+                        <a href="#"></a>
                     </li>
                 </ul>
             </div>
