--- a/index.html
+++ b/index.html
@@ -45,18 +45,30 @@
                 <h2 class="visually-hidden">Наші переваги</h2>
                 <ul class="perevagy">
                     <li class="logo-perevagy">
+                        <div class="bg-perevagy"><svg class="icon-perevagy">
+                            <use href="./images/sprite.svg#icon-antenna"></use>
+                        </svg></div>
                         <h3 class="title-perevagy">Увага до деталей</h3>
                         <p class="paragraph-perevagy">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
                     <li class="logo-perevagy">
+                        <div class="bg-perevagy"><svg class="icon-perevagy">
+                            <use href="./images/sprite.svg#icon-clock"></use>
+                        </svg></div>
                         <h3 class="title-perevagy">Пунктуальність</h3>
                         <p class="paragraph-perevagy">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
                     <li class="logo-perevagy">
+                        <div class="bg-perevagy"><svg class="icon-perevagy">
+                            <use href="./images/sprite.svg#icon-diagram"></use>
+                        </svg></div>
                         <h3 class="title-perevagy">Планування</h3>
                         <p class="paragraph-perevagy">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="logo-perevagy">
+                        <div class="bg-perevagy"><svg class="icon-perevagy">
+                            <use href="./images/sprite.svg#icon-astronaut"></use>
+                        </svg></div>
                         <h3 class="title-perevagy">Сучасні технології</h3>
                         <p class="paragraph-perevagy">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li class="logo-perevagy">
@@ -113,7 +125,58 @@
                 <h2 class="title-section">Постійні клієнти</h2>
                 <ul class="clients">
                     <li>
-                        <a href="#"></a>
+                        <a href="#">
+                            <div class="border-client">
+                                <svg class="logo-client" width="41px" height="46.7px">
+                                    <use href="./images/sprite.svg#icon-logo-comp-1"></use>
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="border-client">
+                                <svg class="logo-client" width="40px" height="52px">
+                                    <use href="./images/sprite.svg#icon-logo-comp-2"></use>
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="border-client">
+                                <svg class="logo-client" width="43.46px" height="41.18px">
+                                    <use href="./images/sprite.svg#icon-logo-comp-3"></use>
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="border-client">
+                                <svg class="logo-client" width="84.44px" height="40.62px">
+                                    <use href="./images/sprite.svg#icon-logo-comp-4"></use>
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="border-client">
+                                <svg class="logo-client" width="62.54px" height="45.43px">
+                                    <use href="./images/sprite.svg#icon-logo-comp-5"></use>
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="border-client">
+                                <svg class="logo-client" width="93.79px" height="43.93px">
+                                    <use href="./images/sprite.svg#icon-logo-comp-6"></use>
+                                </svg>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
