--- a/index.html
+++ b/index.html
@@ -27,8 +27,15 @@
             </nav>
             <!-- контакти -->
             <ul class="kontakty">
-                <li class="mail kntkt-dist"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li class="tel kntkt-dist"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="mail kntkt-dist"><a href="mailto:info@devstudio.com" class="link">
+                    <svg class="logo-mail" width="16px" height="12px">
+                        <use href="./images/icons.svg#icon-envelope"></use>
+                    </svg>info@devstudio.com</a>
+                </li>
+                <li class="tel kntkt-dist"><a href="tel:+380961111111" class="link">
+                    <svg class="logo-mail" width="16px" height="12px">
+                        <use href="./images/icons.svg#icon-smartphone"></use>
+                    </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -45,29 +52,29 @@
                 <h2 class="visually-hidden">Наші переваги</h2>
                 <ul class="perevagy">
                     <li class="logo-perevagy">
-                        <div class="bg-perevagy"><svg class="icon-perevagy">
-                            <use href="./images/sprite.svg#icon-antenna"></use>
+                        <div class="bg-perevagy"><svg class="icon-perevagy" height="70px">
+                            <use href="./images/icons.svg#icon-antenna"></use>
                         </svg></div>
                         <h3 class="title-perevagy">Увага до деталей</h3>
                         <p class="paragraph-perevagy">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
                     <li class="logo-perevagy">
-                        <div class="bg-perevagy"><svg class="icon-perevagy">
-                            <use href="./images/sprite.svg#icon-clock"></use>
+                        <div class="bg-perevagy"><svg class="icon-perevagy" height="70px">
+                            <use href="./images/icons.svg#icon-clock"></use>
                         </svg></div>
                         <h3 class="title-perevagy">Пунктуальність</h3>
                         <p class="paragraph-perevagy">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
                     <li class="logo-perevagy">
-                        <div class="bg-perevagy"><svg class="icon-perevagy">
-                            <use href="./images/sprite.svg#icon-diagram"></use>
+                        <div class="bg-perevagy"><svg class="icon-perevagy" height="70px">
+                            <use href="./images/icons.svg#icon-diagram"></use>
                         </svg></div>
                         <h3 class="title-perevagy">Планування</h3>
                         <p class="paragraph-perevagy">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="logo-perevagy">
-                        <div class="bg-perevagy"><svg class="icon-perevagy">
-                            <use href="./images/sprite.svg#icon-astronaut"></use>
+                        <div class="bg-perevagy"><svg class="icon-perevagy" height="70px">
+                            <use href="./images/icons.svg#icon-astronaut"></use>
                         </svg></div>
                         <h3 class="title-perevagy">Сучасні технології</h3>
                         <p class="paragraph-perevagy">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
@@ -94,6 +101,36 @@
                         <div class="comand-content">
                             <h3 class="title-name">Ігор Дем'яненко</h3>
                             <p class="title-subname">Product Designer</p>
+                            <ul class="list-soc-comand">
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a> 
+                                </li>
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a> 
+                                </li>
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a> 
+                                </li>    
+                            </ul>
                         </div>
                     </li>
                     <li class="card-solid">
@@ -101,6 +138,36 @@
                         <div class="comand-content">
                             <h3 class="title-name">Ольга Рєпіна</h3>
                             <p class="title-subname">Frontend Developer</p>
+                            <ul class="list-soc-comand">
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a> 
+                                </li>
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a> 
+                                </li>
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a> 
+                                </li>    
+                            </ul>
                         </div>
                     </li>
                     <li class="card-solid">
@@ -108,6 +175,36 @@
                         <div class="comand-content">
                             <h3 class="title-name">Микола Тарасов</h3>
                             <p class="title-subname">Marketing</p>
+                            <ul class="list-soc-comand">
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a> 
+                                </li>
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a> 
+                                </li>
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a> 
+                                </li>    
+                            </ul>
                         </div>
                     </li>
                     <li class="card-solid">
@@ -115,6 +212,36 @@
                         <div class="comand-content">
                             <h3 class="title-name">Михайло Єрмаков</h3>
                             <p class="title-subname">UI Designer</p>
+                            <ul class="list-soc-comand">
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a> 
+                                </li>
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a> 
+                                </li>
+                                <li>
+                                    <a href="#" class="solid-round-comand">
+                                        <svg class="logo-soc-comand" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a> 
+                                </li>    
+                            </ul>
                         </div>
                     </li>
                 </ul>
@@ -125,57 +252,45 @@
                 <h2 class="title-section">Постійні клієнти</h2>
                 <ul class="clients">
                     <li>
-                        <a href="#">
-                            <div class="border-client">
-                                <svg class="logo-client" width="41px" height="46.7px">
-                                    <use href="./images/sprite.svg#icon-logo-comp-1"></use>
-                                </svg>
-                            </div>
+                        <a href="#" class="border-client">
+                            <svg class="logo-client" width="41px" height="46.7px">
+                                <use href="./images/icons.svg#icon-logo-comp-1"></use>
+                            </svg>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div class="border-client">
-                                <svg class="logo-client" width="40px" height="52px">
-                                    <use href="./images/sprite.svg#icon-logo-comp-2"></use>
-                                </svg>
-                            </div>
+                        <a href="#" class="border-client">
+                            <svg class="logo-client" width="40px" height="52px">
+                                <use href="./images/icons.svg#icon-logo-comp-2"></use>
+                            </svg>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div class="border-client">
-                                <svg class="logo-client" width="43.46px" height="41.18px">
-                                    <use href="./images/sprite.svg#icon-logo-comp-3"></use>
-                                </svg>
-                            </div>
+                        <a href="#" class="border-client">
+                            <svg class="logo-client" width="43.46px" height="41.18px">
+                                <use href="./images/icons.svg#icon-logo-comp-3"></use>
+                            </svg>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div class="border-client">
-                                <svg class="logo-client" width="84.44px" height="40.62px">
-                                    <use href="./images/sprite.svg#icon-logo-comp-4"></use>
-                                </svg>
-                            </div>
+                        <a href="#" class="border-client">
+                            <svg class="logo-client" width="84.44px" height="40.62px">
+                                <use href="./images/icons.svg#icon-logo-comp-4"></use>
+                            </svg>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div class="border-client">
-                                <svg class="logo-client" width="62.54px" height="45.43px">
-                                    <use href="./images/sprite.svg#icon-logo-comp-5"></use>
-                                </svg>
-                            </div>
+                        <a href="#" class="border-client">
+                            <svg class="logo-client" width="62.54px" height="45.43px">
+                                <use href="./images/icons.svg#icon-logo-comp-5"></use>
+                            </svg>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div class="border-client">
-                                <svg class="logo-client" width="93.79px" height="43.93px">
-                                    <use href="./images/sprite.svg#icon-logo-comp-6"></use>
-                                </svg>
-                            </div>
+                        <a href="#" class="border-client">
+                            <svg class="logo-client" width="93.79px" height="43.93px">
+                                <use href="./images/icons.svg#icon-logo-comp-6"></use>
+                            </svg>
                         </a>
                     </li>
                 </ul>
@@ -184,15 +299,51 @@
     </main>
     <!-- підвал сторінки -->
     <footer class="footer">
-        <div class="container">
-            <a href="./index.html" class="logo-footer"><span class="logo-color">Web</span>Studio</a>
-            <address>
-                <ul class="f-kontakty">
-                    <li class="f-adress kontakt"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="link">м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li class="f-mail kontakt"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                    <li class="f-tel kontakt"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        <div class="container footer-pos">
+            <div class="footer-block-1">
+                <a href="./index.html" class="logo-footer"><span class="logo-color">Web</span>Studio</a>
+                <address>
+                    <ul class="f-kontakty">
+                        <li class="f-adress kontakt"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="link">м. Київ, пр-т Лесі Українки, 26</a></li>
+                        <li class="f-mail kontakt"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                        <li class="f-tel kontakt"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-block-2">
+                <p class="footer-link footer-dist">Приєднуйтесь</p>
+                <ul class="list-soc">
+                    <li>
+                        <a href="#" class="solid-round">
+                            <svg class="logo-soc" width="20px" height="20px">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a> 
+                    </li>
+                    <li>
+                        <a href="#" class="solid-round">
+                            <svg class="logo-soc" width="20px" height="20px">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a> 
+                    </li>
+                    <li>
+                        <a href="#" class="solid-round">
+                            <svg class="logo-soc" width="20px" height="20px">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a> 
+                    </li>
+                    <li>
+                        <a href="#" class="solid-round">
+                            <svg class="logo-soc" width="20px" height="20px">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a> 
+                    </li>
                 </ul>
-            </address>
+            </div>    
+            
         </div>
     </footer>
 </body>     
