--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,15 @@
             </nav>
             <!-- контакти -->
             <ul class="kontakty">
-                <li class="mail kntkt-dist"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li class="tel kntkt-dist"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="mail kntkt-dist"><a href="mailto:info@devstudio.com" class="link">
+                    <svg class="logo-mail" width="16px" height="12px">
+                        <use href="./images/icons.svg#icon-envelope"></use>
+                    </svg>info@devstudio.com</a>
+                </li>
+                <li class="tel kntkt-dist"><a href="tel:+380961111111" class="link">
+                    <svg class="logo-mail" width="16px" height="12px">
+                        <use href="./images/icons.svg#icon-smartphone"></use>
+                    </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -50,7 +57,7 @@
                     <div class="border-card">
                         <li><article>
                                 <a href="#">
-                                <img src="./images/portf-01.jpg" alt="ноутбук з відкритим сайтом" width="370" />
+                                    <img src="./images/portf-01.jpg" alt="ноутбук з відкритим сайтом" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio">Технокряк</h2>
                                         <p class="subname-portfolio">Веб-сайт</p>
@@ -62,7 +69,7 @@
                     <div class="border-card">
                         <li><article>
                                 <a href="#">
-                                <img src="./images/portf-02.jpg" alt="баскетболісти" width="370" />
+                                    <img src="./images/portf-02.jpg" alt="баскетболісти" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                                         <p class="subname-portfolio">Дизайн</p>
@@ -74,7 +81,7 @@
                     <div class="border-card">
                         <li><article>
                                 <a href="#">
-                                <img src="./images/portf-03.jpg" alt="логотип форми риби" width="370" />
+                                    <img src="./images/portf-03.jpg" alt="логотип форми риби" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio">Ресторан <span lang="en">Seafood</span></h2>
                                         <p class="subname-portfolio">Додаток</p>
@@ -86,7 +93,7 @@
                     <div class="border-card">
                         <li><article>
                                 <a href="#">
-                                <img src="./images/portf-04.jpg" alt="навушники" width="370" />
+                                    <img src="./images/portf-04.jpg" alt="навушники" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio">Проєкт <span lang="en">Prime</span></h2>
                                         <p class="subname-portfolio">Маркетинг</p>
@@ -98,7 +105,7 @@
                     <div class="border-card">
                         <li><article>
                                 <a href="#">
-                                <img src="./images/portf-05.jpg" alt="дві коробки" width="370" />
+                                    <img src="./images/portf-05.jpg" alt="дві коробки" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio">Проєкт <span lang="en">Boxes</span></h2>
                                         <p class="subname-portfolio">Додаток</p>
@@ -110,7 +117,7 @@
                     <div class="border-card">
                         <li><article>
                                 <a href="#">
-                                <img src="./images/portf-06.jpg" alt="монітор з відкритим сайтом" width="370" />
+                                    <img src="./images/portf-06.jpg" alt="монітор з відкритим сайтом" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio" lang="en">Inspiration has no Borders</h2>
                                         <p class="subname-portfolio">Веб-сайт</p>
@@ -122,7 +129,7 @@
                     <div class="border-card">
                         <li><article>
                                 <a href="#">
-                                <img src="./images/portf-07.jpg" alt="журнал" width="370" />
+                                    <img src="./images/portf-07.jpg" alt="журнал" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio">Видання <span lang="en">Limited Edition</span></h2>
                                         <p class="subname-portfolio">Дизайн</p>
@@ -134,7 +141,7 @@
                     <div class="border-card">
                         <li><article>
                                 <a href="#">
-                                <img src="./images/portf-08.jpg" alt="бірка" width="370" />
+                                    <img src="./images/portf-08.jpg" alt="бірка" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio">Проєкт <span lang="en">LAB</span></h2>
                                         <p class="subname-portfolio">Маркетинг</p>
@@ -146,7 +153,7 @@
                     <div class="border-card">
                         <li><article>
                                 <a href="#">
-                                <img src="./images/portf-09.jpg" alt="руки друкують на ноутбуці" width="370" />
+                                    <img src="./images/portf-09.jpg" alt="руки друкують на ноутбуці" width="370" />
                                     <div class="card-content">
                                         <h2 class="title-portfolio" lang="en">Growing Business</h2>
                                         <p class="subname-portfolio">Додаток</p>
@@ -161,15 +168,51 @@
     </main>
     <!-- підвал сторінки -->
     <footer class="footer">
-        <div class="container">
-            <a href="./index.html" class="logo-footer"><span class="logo-color">Web</span>Studio</a>
-            <address>
-                <ul class="f-kontakty">
-                    <li class="f-adress kontakt"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="link">м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li class="f-mail kontakt"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                    <li class="f-tel kontakt"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        <div class="container footer-pos">
+            <div class="footer-block-1">
+                <a href="./index.html" class="logo-footer"><span class="logo-color">Web</span>Studio</a>
+                <address>
+                    <ul class="f-kontakty">
+                        <li class="f-adress kontakt"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="link">м. Київ, пр-т Лесі Українки, 26</a></li>
+                        <li class="f-mail kontakt"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                        <li class="f-tel kontakt"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-block-2">
+                <p class="footer-link footer-dist">Приєднуйтесь</p>
+                <ul class="list-soc">
+                    <li>
+                        <a href="#" class="solid-round">
+                            <svg class="logo-soc" width="20px" height="20px">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a> 
+                    </li>
+                    <li>
+                        <a href="#" class="solid-round">
+                            <svg class="logo-soc" width="20px" height="20px">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a> 
+                    </li>
+                    <li>
+                        <a href="#" class="solid-round">
+                            <svg class="logo-soc" width="20px" height="20px">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a> 
+                    </li>
+                    <li>
+                        <a href="#" class="solid-round">
+                            <svg class="logo-soc" width="20px" height="20px">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a> 
+                    </li>
                 </ul>
-            </address>
+            </div>    
+            
         </div>
     </footer>
 </body>
